--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,7 +58,7 @@
 
         .module-card:hover {
             transform: translateY(-4px);
-            box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
             border-color: var(--md-sys-color-primary-container);
         }
 
@@ -80,19 +81,20 @@
         }
     </style>
 </head>
+
 <body>
     <!-- Sidebar -->
     <aside class="app-sidebar">
         <div class="logo-container">
             <div class="logo">Chiranjeevi</div>
         </div>
-        
+
         <nav class="nav-menu">
             <a href="index.html" class="nav-item active">
                 <span class="nav-icon">🏠</span>
                 <span class="nav-text">Home</span>
             </a>
-            <a href="old_index.html" class="nav-item">
+            <a href="screening.html" class="nav-item">
                 <span class="nav-icon">🔬</span>
                 <span class="nav-text">Screening</span>
             </a>
@@ -112,7 +114,8 @@
         <div class="welcome-hero">
             <h1 class="welcome-title">Welcome to Chiranjeevi</h1>
             <p class="welcome-desc">
-                Your advanced AI-powered health assistant. Choose a module to get started with your health assessment or consultation.
+                Your advanced AI-powered health assistant. Choose a module to get started with your health assessment or
+                consultation.
             </p>
 
             <div class="module-cards">
@@ -120,7 +123,8 @@
                     <span class="module-icon">🔬</span>
                     <h3 class="module-title">Health Screening</h3>
                     <p class="module-text">
-                        Non-invasive screening using camera, thermal, and radar sensors for comprehensive vitals analysis.
+                        Non-invasive screening using camera, thermal, and radar sensors for comprehensive vitals
+                        analysis.
                     </p>
                 </a>
 
@@ -135,4 +139,5 @@
         </div>
     </main>
 </body>
+
 </html>
