--- a/frontend/screening.html
+++ b/frontend/screening.html
@@ -909,7 +909,7 @@
 				<span class="nav-icon">🏠</span>
 				<span class="nav-text">Home</span>
 			</a>
-			<a href="old_index.html" class="nav-item active">
+			<a href="screening.html" class="nav-item active">
 				<span class="nav-icon">🔬</span>
 				<span class="nav-text">Screening</span>
 			</a>
