feat: Implement initial FastAPI health screening pipeline with medical agent, hardware integration, clinical rules, and AI services.

--- a/frontend/screening.html
+++ b/frontend/screening.html
@@ -1049,24 +1049,16 @@
 						<div class="step-circle">1</div>
 						Initializing
 					</div>
-					<div class="step-item" data-step="vitals">
-						<div class="step-circle">2</div>
-						Vitals Collection (10s)
-					</div>
-					<div class="step-item" data-step="baseline">
-						<div class="step-circle">3</div>
-						Baseline Calibration
-					</div>
 					<div class="step-item" data-step="capture">
-						<div class="step-circle">4</div>
-						Face Analysis (10s)
+						<div class="step-circle">2</div>
+						Face & Vitals Scan (30s)
 					</div>
 					<div class="step-item" data-step="pose">
-						<div class="step-circle">5</div>
+						<div class="step-circle">3</div>
 						Body Analysis (10s)
 					</div>
 					<div class="step-item" data-step="process">
-						<div class="step-circle">6</div>
+						<div class="step-circle">4</div>
 						AI Processing
 					</div>
 				</div>
